# pipy

./: .envrc.example  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  justfile  pyproject.toml  zensical.toml
docs/: architecture.md  automation-rpc.md  backlog.md  compaction.md  customization.md  export-distribution.md  extension-api.md  extension-footer-data-provider-plan.md  extension-send-message-delivery-implementation.md  extension-send-message-delivery-plan.md  harness-spec.md  index.md  keybindings.md  parity-criterion.md  parity-plan.md  pi-mono-gap-audit.md  pi-parity.md  provider-catalog.md  providers.md  quickstart.md  sdk.md  session-manager-actions-plan.md  session-storage.md  session-tree.md  sessions.md  settings-config.md  settings.md  terminal-setup.md  tmux.md  tui-workflow.md  usage.md  user-documentation.md
scripts/: answer_demo.py  package_demo.py  parity_lessons.py  parity_runner.py  parity_score.sh  tmux_answer_verify.sh  tmux_package_verify.sh  tmux_pi_comparison_verify.sh  tmux_screenshot.sh  tmux_transient_ui_verify.sh  tmux_tui_input_verify.sh
tests/: conftest.py  test_auto_capture.py  test_bash_tool.py  test_catalog.py  test_catalog_lineage.py  test_cli_reference_roots.py  test_cli_top_level_routing.py  test_clipboard_image.py  test_command_sandbox.py  test_editor_completion.py  test_example_answer_extension.py  test_harness_cli.py  test_harness_native_cli.py  test_harness_runner.py  test_harness_subprocess_adapter.py  test_local_shell.py  test_native_anthropic_provider.py  test_native_approval_prompt.py  test_native_approval_sandbox_policy.py  test_native_at_file_context_cli.py  test_native_attachment_provider_consumption.py  test_native_attachment_repl.py  test_native_auth_store.py  test_native_automation_cli.py  test_native_automation_events.py  test_native_automation_json_mode.py  test_native_automation_jsonl.py  test_native_automation_rpc.py  test_native_azure_openai_provider.py  test_native_bedrock_provider.py  test_native_cancellation.py  (+173 more)
(+615 files in other folders)
