[project]
name = "pipy"
version = "0.1.0"
description = "Local tooling for pipy coding-agent session records."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
pipy-session = "pipy_session.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.18",
    "pytest>=8.0",
    "ruff>=0.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pipy_session"]

[tool.pytest.ini_options]
testpaths = ["tests"]
