[project]
name = "pipy"
version = "0.1.0"
description = "Local tooling for pipy coding-agent session records."
readme = "README.md"
requires-python = ">=3.11"
# Intentionally no runtime dependencies; developer tooling lives under [dependency-groups].dev.
dependencies = []

[project.scripts]
pipy = "pipy_harness.cli:main"
pipy-session = "pipy_session.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.18",
    "pytest>=8.0",
    "ruff>=0.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pipy_session", "src/pipy_harness"]

[tool.pytest.ini_options]
testpaths = ["tests"]
